@@ -1,8 +1,5 @@
 package com.tngtech.jgiven.report.asciidoc;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
-import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ListMultimap;
 import com.tngtech.jgiven.report.ReportBlockConverter;
 import com.tngtech.jgiven.report.model.CasesTable;
@@ -16,24 +13,18 @@ import com.tngtech.jgiven.report.model.StepStatus;
 import com.tngtech.jgiven.report.model.Tag;
 import com.tngtech.jgiven.report.model.Word;
 import java.util.List;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class AsciiDocReportModelVisitorTest {
+import static org.assertj.core.api.Assertions.assertThat;
+
+class AsciiDocReportModelVisitorTest {
     private final ReportBlockConverter blockConverter = new MyFakeReportBlockConverter();
-
-    private AsciiDocReportModelVisitor reportModelVisitor;
-
-    @Before
-    public void setUp() {
-        ReportStatistics reportStatistics = new ReportStatistics();
-        reportModelVisitor = new AsciiDocReportModelVisitor(blockConverter, reportStatistics);
-    }
+    private AsciiDocReportModelVisitor reportModelVisitor = new AsciiDocReportModelVisitor(blockConverter, new ReportStatistics());
 
     @Test
-    public void visits_a_simple_report() {
+    void visits_a_simple_report() {
         // given
-        ReportModel report = mkReport(mkScenario("Simple Scenario", false, mkScenarioCase(
+        var report = mkReport(mkScenario("Simple Scenario", false, mkScenarioCase(
                 mkStep("Given", "state"),
                 mkStep("When", "action"),
                 mkStep("Then", "outcome"))));
@@ -42,8 +33,8 @@ public class AsciiDocReportModelVisitorTest {
         report.accept(reportModelVisitor);
 
         // then
-        assertThat(reportModelVisitor.getResult())
-                .isEqualTo(ImmutableList.of(
+        assertThat(reportModelVisitor.getAsciiDocBlocks())
+                .isEqualTo(List.of(
                         "FeatureHeaderBlock",
                         "ScenarioHeaderBlock",
                         "FirstStepBlock",
@@ -53,10 +44,10 @@ public class AsciiDocReportModelVisitorTest {
     }
 
     @Test
-    public void visits_a_report_with_two_scenarios() {
+    void visits_a_report_with_two_scenarios() {
         // given
 
-        ReportModel report = mkReport(
+        var report = mkReport(
                 mkScenario("Scenario One", false, mkScenarioCase(
                         mkStep("Given", "state"),
                         mkStep("When", "action"),
@@ -70,8 +61,8 @@ public class AsciiDocReportModelVisitorTest {
         report.accept(reportModelVisitor);
 
         // then
-        assertThat(reportModelVisitor.getResult())
-                .isEqualTo(ImmutableList.of(
+        assertThat(reportModelVisitor.getAsciiDocBlocks())
+                .isEqualTo(List.of(
                         "FeatureHeaderBlock",
                         "ScenarioHeaderBlock",
                         "FirstStepBlock",
@@ -86,9 +77,9 @@ public class AsciiDocReportModelVisitorTest {
     }
 
     @Test
-    public void visits_a_scenario_with_two_standalone_cases() {
+    void visits_a_scenario_with_two_standalone_cases() {
         // given
-        ReportModel report = mkReport(mkScenario("Simple Scenario", false,
+        var report = mkReport(mkScenario("Simple Scenario", false,
                 mkScenarioCase(
                         mkStep("Given", "state"),
                         mkStep("When", "action"),
@@ -102,8 +93,8 @@ public class AsciiDocReportModelVisitorTest {
         report.accept(reportModelVisitor);
 
         // then
-        assertThat(reportModelVisitor.getResult())
-                .isEqualTo(ImmutableList.of(
+        assertThat(reportModelVisitor.getAsciiDocBlocks())
+                .isEqualTo(List.of(
                         "FeatureHeaderBlock",
                         "ScenarioHeaderBlock",
                         "CaseHeaderBlock",
@@ -118,9 +109,9 @@ public class AsciiDocReportModelVisitorTest {
     }
 
     @Test
-    public void visits_a_scenario_with_two_cases_as_table() {
+    void visits_a_scenario_with_two_cases_as_table() {
         // given
-        ReportModel report = mkReport(mkScenario("Simple Scenario", true,
+        var report = mkReport(mkScenario("Simple Scenario", true,
                 mkScenarioCase(
                         mkStep("Given", "state"),
                         mkStep("When", "action"),
@@ -134,8 +125,8 @@ public class AsciiDocReportModelVisitorTest {
         report.accept(reportModelVisitor);
 
         // then
-        assertThat(reportModelVisitor.getResult())
-                .isEqualTo(ImmutableList.of(
+        assertThat(reportModelVisitor.getAsciiDocBlocks())
+                .isEqualTo(List.of(
                         "FeatureHeaderBlock",
                         "ScenarioHeaderBlock",
                         "FirstStepBlock",
@@ -146,9 +137,9 @@ public class AsciiDocReportModelVisitorTest {
     }
 
     @Test
-    public void visits_a_scenario_with_a_section() {
+    void visits_a_scenario_with_a_section() {
         // given
-        ReportModel report = mkReport(mkScenario("Simple Scenario", false, mkScenarioCase(
+        var report = mkReport(mkScenario("Simple Scenario", false, mkScenarioCase(
                 mkSectionTitle("Some Section"),
                 mkStep("Given", "state"),
                 mkStep("When", "action"),
@@ -158,8 +149,8 @@ public class AsciiDocReportModelVisitorTest {
         report.accept(reportModelVisitor);
 
         // then
-        assertThat(reportModelVisitor.getResult())
-                .isEqualTo(ImmutableList.of(
+        assertThat(reportModelVisitor.getAsciiDocBlocks())
+                .isEqualTo(List.of(
                         "FeatureHeaderBlock",
                         "ScenarioHeaderBlock",
                         "FirstStepBlock",
@@ -169,24 +160,24 @@ public class AsciiDocReportModelVisitorTest {
     }
 
     @Test
-    public void visits_a_scenario_with_two_sections() {
+    void visits_a_scenario_with_two_sections() {
         // given
-        ReportModel report = mkReport(mkScenario("Simple Scenario", false, mkScenarioCase(
+        var report = mkReport(mkScenario("Simple Scenario", false, mkScenarioCase(
                 mkSectionTitle("First Section"),
                 mkStep("Given", "state"),
                 mkStep("When", "action"),
                 mkStep("Then", "outcome"),
                 mkSectionTitle("Second Section"),
-                mkStep("Given", "other state"),
+                mkStep("Given", "another state"),
                 mkStep("When", "other action"),
-                mkStep("Then", "other outcome"))));
+                mkStep("Then", "another outcome"))));
 
         // when
         report.accept(reportModelVisitor);
 
         // then
-        assertThat(reportModelVisitor.getResult())
-                .isEqualTo(ImmutableList.of(
+        assertThat(reportModelVisitor.getAsciiDocBlocks())
+                .isEqualTo(List.of(
                         "FeatureHeaderBlock",
                         "ScenarioHeaderBlock",
                         "FirstStepBlock",
@@ -199,7 +190,7 @@ public class AsciiDocReportModelVisitorTest {
     }
 
     private static ReportModel mkReport(final ScenarioModel... scenarios) {
-        ReportModel report = new ReportModel();
+        var report = new ReportModel();
         for (final ScenarioModel scenarioModel : scenarios) {
             report.addScenarioModel(scenarioModel);
 
@@ -209,7 +200,7 @@ public class AsciiDocReportModelVisitorTest {
 
     private static ScenarioModel mkScenario(final String description, final boolean casesAsTable,
                                             final ScenarioCaseModel... cases) {
-        ScenarioModel scenario = new ScenarioModel();
+        var scenario = new ScenarioModel();
         scenario.setDescription(description);
         scenario.setCasesAsTable(casesAsTable);
         for (final ScenarioCaseModel caseModel : cases) {
@@ -219,7 +210,7 @@ public class AsciiDocReportModelVisitorTest {
     }
 
     private static ScenarioCaseModel mkScenarioCase(final StepModel... steps) {
-        ScenarioCaseModel scenarioCase = new ScenarioCaseModel();
+        var scenarioCase = new ScenarioCaseModel();
         for (final StepModel step : steps) {
             scenarioCase.addStep(step);
         }
@@ -227,14 +218,14 @@ public class AsciiDocReportModelVisitorTest {
     }
 
     private static StepModel mkSectionTitle(final String title) {
-        final Word sectionWord = new Word(title);
-        final StepModel stepModel = new StepModel(title, List.of(sectionWord));
+        final var sectionWord = new Word(title);
+        final var stepModel = new StepModel(title, List.of(sectionWord));
         stepModel.setIsSectionTitle(true);
         return stepModel;
     }
 
     private static StepModel mkStep(final String introWord, final String object) {
-        StepModel step = new StepModel();
+        var step = new StepModel();
         step.addIntroWord(Word.introWord(introWord));
         step.addWords(new Word("some"), new Word(object));
         return step;
@@ -243,39 +234,60 @@ public class AsciiDocReportModelVisitorTest {
     private static class MyFakeReportBlockConverter implements ReportBlockConverter {
 
         @Override
-        public String convertStatisticsBlock(final ListMultimap<String, ReportStatistics> featureStatistics,
+        public String convertStatisticsBlock(
+                final ListMultimap<String, ReportStatistics> featureStatistics,
                 final ReportStatistics totalStatistics) {
             return "StatisticsBlock";
         }
 
         @Override
-        public String convertFeatureHeaderBlock(String featureName, ReportStatistics statistics,
+        public String convertFeatureHeaderBlock(
+                String featureName,
+                ReportStatistics statistics,
                 String description) {
             return "FeatureHeaderBlock";
         }
 
         @Override
-        public String convertScenarioHeaderBlock(String name, ExecutionStatus executionStatus, long duration,
-                                                 List<Tag> tagNames, String extendedDescription) {
+        public String convertScenarioHeaderBlock(
+                final String identifier,
+                String name,
+                ExecutionStatus executionStatus,
+                long duration,
+                List<Tag> tags,
+                String extendedDescription) {
             return "ScenarioHeaderBlock";
         }
 
         @Override
-        public String convertCaseHeaderBlock(final int caseNr, final ExecutionStatus executionStatus,
-                                             final long duration, final String description) {
+        public String convertCaseHeaderBlock(
+                final int caseNr,
+                final ExecutionStatus executionStatus,
+                final long duration,
+                final String description) {
             return "CaseHeaderBlock";
         }
 
         @Override
-        public String convertFirstStepBlock(final int depth, final List<Word> words, final StepStatus status,
-                final long durationInNanos, final String extendedDescription,
-                final boolean caseIsUnsuccessful, final String currentSectionTitle) {
+        public String convertFirstStepBlock(
+                final int depth,
+                final List<Word> words,
+                final StepStatus status,
+                final long durationInNanos,
+                final String extendedDescription,
+                final boolean caseIsUnsuccessful,
+                final String currentSectionTitle) {
             return "FirstStepBlock";
         }
 
         @Override
-        public String convertStepBlock(int depth, List<Word> words, StepStatus status, long durationInNanos,
-                String extendedDescription, boolean caseIsUnsuccessful) {
+        public String convertStepBlock(
+                int depth,
+                List<Word> words,
+                StepStatus status,
+                long durationInNanos,
+                String extendedDescription,
+                boolean caseIsUnsuccessful) {
             return "StepBlock";
         }
 
@@ -290,7 +302,7 @@ public class AsciiDocReportModelVisitorTest {
         }
 
         @Override
-        public String convertScenarioFooterBlock(ExecutionStatus executionStatus) {
+        public String convertScenarioFooterBlock(final String identifier, ExecutionStatus executionStatus, final List<Tag> tags) {
             return "ScenarioFooterBlock";
         }
     }
