@@ -1,10 +1,5 @@
 package com.tngtech.jgiven.report.asciidoc;
 
-import static org.assertj.core.api.Assertions.assertThat;
-
-import com.google.common.collect.ImmutableList;
-import com.tngtech.java.junit.dataprovider.DataProvider;
-import com.tngtech.java.junit.dataprovider.DataProviderRunner;
 import com.tngtech.jgiven.annotation.Table;
 import com.tngtech.jgiven.report.ReportBlockConverter;
 import com.tngtech.jgiven.report.model.DataTable;
@@ -12,11 +7,13 @@ import com.tngtech.jgiven.report.model.StepStatus;
 import com.tngtech.jgiven.report.model.Word;
 import java.util.Collections;
 import java.util.List;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 
-@RunWith(DataProviderRunner.class)
-public class AsciiDocStepBlockConverterTest {
+import static org.assertj.core.api.Assertions.assertThat;
+
+class AsciiDocStepBlockConverterTest {
 
     private static final int ARBITRARY_SHORT_DURATION = 3899;
     private static final long DURATION_JUST_BELOW_THRESHOLD = 9_999_999L;
@@ -29,12 +26,12 @@ public class AsciiDocStepBlockConverterTest {
     ////
 
     @Test
-    public void convert_fast_step() {
+    void convert_fast_step() {
         // given
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("a coffee machine"));
+        List<Word> words = List.of(Word.introWord("given"), new Word("a coffee machine"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, DURATION_JUST_BELOW_THRESHOLD, null, false);
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, DURATION_JUST_BELOW_THRESHOLD, null, false);
 
         // then
         assertThatBlockContainsLines(block,
@@ -42,12 +39,12 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_slow_step() {
+    void convert_slow_step() {
         // given
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("a coffee machine"));
+        List<Word> words = List.of(Word.introWord("given"), new Word("a coffee machine"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, DURATION_JUST_ABOVE_THRESHOLD, null, false);
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, DURATION_JUST_ABOVE_THRESHOLD, null, false);
 
         // then
         assertThatBlockContainsLines(block,
@@ -55,12 +52,12 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_step_with_description() {
+    void convert_step_with_description() {
         // given
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("a coffee machine"));
+        List<Word> words = List.of(Word.introWord("given"), new Word("a coffee machine"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION,
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION,
                 "It is a brand new machine.", false);
 
         // then
@@ -70,12 +67,12 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_first_step_in_section() {
+    void convert_first_step_in_section() {
         // given
         List<Word> words = Collections.singletonList(Word.introWord("given"));
 
         // when
-        String block = converter.convertFirstStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION,
+        var block = converter.convertFirstStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION,
                 null, false, "First section");
 
         // then
@@ -86,12 +83,12 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_first_step_without_section() {
+    void convert_first_step_without_section() {
         // given
         List<Word> words = Collections.singletonList(Word.introWord("given"));
 
         // when
-        String block = converter.convertFirstStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false,
+        var block = converter.convertFirstStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false,
                 null);
 
         // then
@@ -101,15 +98,15 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_step_with_simple_argument() {
+    void convert_step_with_simple_argument() {
         // given
         List<Word> words =
-            ImmutableList.of(Word.introWord("given"), new Word("a coffee machine with"),
+                List.of(Word.introWord("given"), new Word("a coffee machine with"),
                 Word.argWord("ncoffees", "0", "0"),
                 new Word("coffees"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
 
         // then
         assertThatBlockContainsLines(block,
@@ -117,15 +114,15 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_step_with_special_argument() {
+    void convert_step_with_special_argument() {
         // given
         List<Word> words =
-                ImmutableList.of(Word.introWord("given"), new Word("the coffee machine"),
+                List.of(Word.introWord("given"), new Word("the coffee machine"),
                         Word.argWord("state", "false", "is *not*"),
                         new Word("active"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
 
         // then
         assertThatBlockContainsLines(block,
@@ -133,13 +130,13 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_step_with_multiline_argument() {
+    void convert_step_with_multiline_argument() {
         // given
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("a coffee machine with"),
+        List<Word> words = List.of(Word.introWord("given"), new Word("a coffee machine with"),
             Word.argWord("description", "0", "very nice text" + LINE_BREAK + "and also more text"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
 
         // then
         assertThatBlockContainsLines(block,
@@ -154,13 +151,13 @@ public class AsciiDocStepBlockConverterTest {
 
 
     @Test
-    public void convert_step_with_multiline_argument_which_itself_contains_literal_block_delimiter() {
+    void convert_step_with_multiline_argument_which_itself_contains_literal_block_delimiter() {
         // given
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("a coffee machine with"),
+        List<Word> words = List.of(Word.introWord("given"), new Word("a coffee machine with"),
                 Word.argWord("description", "0", "text above" + LINE_BREAK + "...." + LINE_BREAK + "and text below"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
 
         // then
         assertThatBlockContainsLines(block,
@@ -176,16 +173,16 @@ public class AsciiDocStepBlockConverterTest {
 
 
     @Test
-    public void convert_step_with_parameter() {
+    void convert_step_with_parameter() {
         // given
-        Word ncoffees = Word.argWord("coffee count", "0", "0");
+        var ncoffees = Word.argWord("coffee count", "0", "0");
         ncoffees.getArgumentInfo().setParameterName("coffee count");
 
         List<Word> words =
-            ImmutableList.of(Word.introWord("given"), new Word("a coffee machine with"), ncoffees, new Word("coffees"));
+                List.of(Word.introWord("given"), new Word("a coffee machine with"), ncoffees, new Word("coffees"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
 
         // then
         assertThatBlockContainsLines(block,
@@ -193,17 +190,17 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_step_with_data_table_with_horizontal_header() {
+    void convert_step_with_data_table_with_horizontal_header() {
         // given
-        ImmutableList<List<String>> productsTable =
-            ImmutableList.of(ImmutableList.of("product", "price"), ImmutableList.of("apples", "23"),
-                ImmutableList.of("pears", "42"));
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("the products"),
+        List<List<String>> productsTable =
+                List.of(List.of("product", "price"), List.of("apples", "23"),
+                        List.of("pears", "42"));
+        List<Word> words = List.of(Word.introWord("given"), new Word("the products"),
             Word.argWord("products", productsTable.toString(),
                 new DataTable(Table.HeaderType.HORIZONTAL, productsTable)));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
 
         // then
         assertThatBlockContainsLines(block,
@@ -218,16 +215,16 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_step_with_data_table_vertical_header() {
+    void convert_step_with_data_table_vertical_header() {
         // given
-        ImmutableList<List<String>> productsTable =
-            ImmutableList.of(ImmutableList.of("product", "apples", "pears"), ImmutableList.of("price", "23", "42"));
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("the products"),
+        List<List<String>> productsTable =
+                List.of(List.of("product", "apples", "pears"), List.of("price", "23", "42"));
+        List<Word> words = List.of(Word.introWord("given"), new Word("the products"),
             Word.argWord("products", productsTable.toString(),
                 new DataTable(Table.HeaderType.VERTICAL, productsTable)));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
 
         // then
         assertThatBlockContainsLines(block,
@@ -241,13 +238,13 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_step_with_multiline_argument_and_extended_description() {
+    void convert_step_with_multiline_argument_and_extended_description() {
         // given
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("a coffee machine with"),
+        List<Word> words = List.of(Word.introWord("given"), new Word("a coffee machine with"),
                 Word.argWord("description", "0", "very nice text" + LINE_BREAK + "and also more text"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION,
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION,
                 "It is a brand new machine.", false);
 
         // then
@@ -263,17 +260,17 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_step_with_multiline_argument_and_data_table() {
+    void convert_step_with_multiline_argument_and_data_table() {
         // given
-        ImmutableList<List<String>> productsTable =
-                ImmutableList.of(ImmutableList.of("product", "price"), ImmutableList.of("apples", "23"));
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("a coffee machine with"),
+        List<List<String>> productsTable =
+                List.of(List.of("product", "price"), List.of("apples", "23"));
+        List<Word> words = List.of(Word.introWord("given"), new Word("a coffee machine with"),
                 Word.argWord("description", "0", "very nice text" + LINE_BREAK + "and also more text"),
                 new Word("and the products"), Word.argWord("products", productsTable.toString(),
                         new DataTable(Table.HeaderType.HORIZONTAL, productsTable)));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, ARBITRARY_SHORT_DURATION, null, false);
 
         // then
         assertThatBlockContainsLines(block,
@@ -298,38 +295,38 @@ public class AsciiDocStepBlockConverterTest {
     ////
 
     @Test
-    public void convert_fast_step_within_unsuccessful_scenario_case() {
+    void convert_fast_step_within_unsuccessful_scenario_case() {
         // given
         List<Word> words = Collections.singletonList(Word.introWord("given"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PASSED, DURATION_JUST_BELOW_THRESHOLD, null, true);
+        var block = converter.convertStepBlock(0, words, StepStatus.PASSED, DURATION_JUST_BELOW_THRESHOLD, null, true);
 
         // then
         assertThatBlockContainsLines(block, "* [.jg-intro-word]*Given* icon:check-square[role=green]");
     }
 
-    @Test
-    @DataProvider({"PASSED, check-square[role=green]", "FAILED, exclamation-circle[role=red]",
+    @ParameterizedTest
+    @CsvSource({ "PASSED, check-square[role=green]", "FAILED, exclamation-circle[role=red]",
         "SKIPPED, step-forward[role=silver]", "PENDING, ban[role=silver]"})
-    public void convert_slow_step_within_unsuccessful_scenario_case(final StepStatus stepStatus, final String icon) {
+    void convert_slow_step_within_unsuccessful_scenario_case(final StepStatus stepStatus, final String icon) {
         // given
         List<Word> words = Collections.singletonList(Word.introWord("given"));
 
         // when
-        String block = converter.convertStepBlock(0, words, stepStatus, DURATION_JUST_ABOVE_THRESHOLD, null, true);
+        var block = converter.convertStepBlock(0, words, stepStatus, DURATION_JUST_ABOVE_THRESHOLD, null, true);
 
         // then
         assertThatBlockContainsLines(block, "* [.jg-intro-word]*Given* icon:" + icon + " (10ms)");
     }
 
     @Test
-    public void convert_step_with_description_within_unsuccessful_scenario_case() {
+    void convert_step_with_description_within_unsuccessful_scenario_case() {
         // given
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("a coffee machine"));
+        List<Word> words = List.of(Word.introWord("given"), new Word("a coffee machine"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.PENDING, ARBITRARY_SHORT_DURATION,
+        var block = converter.convertStepBlock(0, words, StepStatus.PENDING, ARBITRARY_SHORT_DURATION,
                 "It is a brand new machine.", true);
 
         // then
@@ -339,13 +336,13 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_step_with_multiline_argument_within_unsuccessful_scenario_case() {
+    void convert_step_with_multiline_argument_within_unsuccessful_scenario_case() {
         // given
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("a coffee machine with"),
+        List<Word> words = List.of(Word.introWord("given"), new Word("a coffee machine with"),
                 Word.argWord("description", "0", "very nice text" + LINE_BREAK + "and also more text"));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.FAILED, ARBITRARY_SHORT_DURATION, null, true);
+        var block = converter.convertStepBlock(0, words, StepStatus.FAILED, ARBITRARY_SHORT_DURATION, null, true);
 
         // then
         assertThatBlockContainsLines(block,
@@ -359,16 +356,16 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     @Test
-    public void convert_step_with_data_table_within_unsuccessful_scenario_case() {
+    void convert_step_with_data_table_within_unsuccessful_scenario_case() {
         // given
-        ImmutableList<List<String>> productsTable =
-                ImmutableList.of(ImmutableList.of("product", "price"), ImmutableList.of("apples", "23"));
-        List<Word> words = ImmutableList.of(Word.introWord("given"), new Word("the products"),
+        List<List<String>> productsTable =
+                List.of(List.of("product", "price"), List.of("apples", "23"));
+        List<Word> words = List.of(Word.introWord("given"), new Word("the products"),
                 Word.argWord("products", productsTable.toString(),
                         new DataTable(Table.HeaderType.HORIZONTAL, productsTable)));
 
         // when
-        String block = converter.convertStepBlock(0, words, StepStatus.SKIPPED, ARBITRARY_SHORT_DURATION, null, true);
+        var block = converter.convertStepBlock(0, words, StepStatus.SKIPPED, ARBITRARY_SHORT_DURATION, null, true);
 
         // then
         assertThatBlockContainsLines(block,
@@ -382,7 +379,7 @@ public class AsciiDocStepBlockConverterTest {
     }
 
     private static void assertThatBlockContainsLines(final String block, final String... expectedLines) {
-        final String[] blockLines = block.split(System.lineSeparator());
+        final var blockLines = block.split(System.lineSeparator());
         assertThat(blockLines).hasSize(expectedLines.length).containsExactly(expectedLines);
     }
 }
